--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "recoil": "^0.7.7",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "prettier": "^3.0.0",
     "vite": "^4.4.5"
   }
 }
